css/style.css
:root {
	--background: #11152d;
	--card_background: #2f2f49;
	--menu_background: #333349;
	--tooltip_background: #616179;
	/* no more used for <dialog> in the trainer */
	--dialog_background: #2f2f4f;
	--foreground: white;
	--forms: #5f5f6f;
	--red: #ffa1a7;
	--blue: #9ccdf9;
	--green: #7de384;
	--purple: #bd93ff;
	--faded: #ccc;
	--links: lightblue;
	--ahover: #ccaaff;
	--default_margin_padding: .5em;
	--table_padding: .25em .5em;
	scrollbar-color: var(--dialog_background) var(--tooltip_background);
}

html {
	scrollbar-gutter: stable;
}

body {
	background: var(--background);
	color: var(--foreground);
	font-family: sans-serif;
	margin: 0 auto;
	min-width: 95%;
	max-width: 1600px;
	min-height: 100dvh;
	display: flex;
	flex-direction: column;
}
a {
	color: var(--links);
}
a:hover {
	color: var(--ahover);
}
li {
	list-style: square;
}
select, button, textarea {
	background-color: var(--forms);
	color: var(--foreground);
	box-shadow: 0 .1em .3em rgba(0, 0, 0, .9);
	border-radius: 5px;
	border: 0px;
}
select, button {
	padding: var(--default_margin_padding);
}
select {
	/* let us style <select> on webkit browsers */
	-webkit-appearance: none;
}
summary {
	list-style: none;
}
summary::-webkit-details-marker {
	display: none;
}
#main-container {
	flex: 1;
}
#temporary-message, .card {
	background: var(--card_background);
	border-radius: 5px;
	padding: var(--default_margin_padding);
	margin: var(--default_margin_padding);
}
#menu, #footer {
	text-align: center;
	background-color: var(--menu_background);
	min-height: 3.2em;
}
#menu {
	/* override .card */
	padding: 0 var(--default_margin_padding);
}
#menu-cortlogo-svg {
	border-radius: 5px;
	box-shadow: 0 .1em .3em rgba(0, 0, 0, .9);
}
#menu-desktop-cortlogo {
	display: inline-block;
	height: 3em;
	width: 3em;
	border-radius: 5px;
	/* disable inheritance from menuitem */
	background: unset;
	box-shadow: unset;
}
#footer {
	min-height: 7.5em;
}
#menu-click, #menu-mobile {
	display: none;
}
#menu-links {
	padding-left:0px;
	margin: 0px;
	display: flex;
	justify-content: center;
	align-items: stretch;
	flex-wrap: wrap;
	align-items: center;
}
#menu-links > li {
	list-style: none;
	display: inline-block;
	margin: 0 .2em;
	flex-grow: 1;
}
#menu-bosses[menu-status="true"] {
	animation: bosseson 5s ease-in-out infinite;
}
@keyframes bosseson {
	0%, 100% {
		box-shadow: 0 .1em .3em red;
	}
	50% {
		box-shadow: 0 .1em .3em darkred;
	}
}
#menu-bz[menu-status="true"] {
	box-shadow: 0 .1em .3em green;
}
.menu-icon {
	height: 1em;
	width: 1em;
	display: inline-block;
	vertical-align: middle;
}
.menu-btn {
	color: var(--foreground);
	display: none;
	width: 100%;
}
.menuitem > a, .menudetails {
	background: var(--tooltip_background);
	text-decoration: none;
	color: var(--foreground);
	display: block;
	padding: var(--default_margin_padding);
	border-radius: 5px;
	box-shadow: 0 .1em .3em rgba(0, 0, 0, .9);
}
.menudetails ul {
	margin-top: .75em;
	position: absolute;
	background: var(--dialog_background);
	border: 1px solid var(--foreground);
	box-shadow: none;
}
.menudetails li, .menudetails ul {
	list-style-type: none;
	padding: .5em;
	margin-left: -.5em;
	text-align: left;
}
.menuitem > a:hover {
	background: var(--dialog_background);
	color: var(--ahover);
	box-shadow: 0 .1em .3em rgba(200, 200, 200, .9);
}
#footer {
	margin-top: 2em;
}
#tz {
	display: inline-grid;
	width: 50%;
	grid-template-columns: auto 1fr;
	align-items: center;
}
#tztitle {
	text-align: right;
	font-weight: bold;
}
h1 {
	text-align: center;
	font-size: 2rem;
}
h3 {
	padding-top: 0;
	margin-top: var(--default_margin_padding);
}
#titleinfo {
	text-align: center;
	margin-top: 1em;
	margin-bottom: 1em;
	min-height: 3em;
}
#temporary-message {
	text-align: center;
	font-weight: bold;
	color: black;
}
#temporary-message a {
	color: white;
}

.red { color: var(--red); }
.blue { color: var(--blue); }
.green { color: var(--green); }
.purple { color: var(--purple); }
.faded { color: var(--faded); }
.center { text-align:center; }
.bold { font-weight: bold; }
.italic { font-style: italic; }
.nodeco { text-decoration: none; }
.small { font-size: 90% }

@media (min-width: 800px) and (max-width: 1200px) {
	#menu-links {
		padding-bottom: var(--default_margin_padding);
	}
	/* align with second row's first item */
	.menu-desktop {
		margin: 0 !important;
	}
	/* align with second row's first item */
	#menu-desktop-cortlogo {
		padding-left:0 !important;
	}
}

@media (max-width: 799px) {
	#menu {
		line-height: 2em;
		text-align: left;
		min-height: 2em;
		padding: var(--default_margin_padding);
	}
	#menu, #footer {
		box-shadow: 0px 0px 2px 2px rgba(200, 200, 200, .4);
	}
	#menu-desktop-cortlogo {
		display: none;
	}
	#menu-links {
		width: 100%;
		display: block;
		margin-top: var(--default_margin_padding);
	}
	#menu-click:not(:checked) ~ ul { display: none; }
	#menu-click:checked ~ ul { display: block; }
	#menu-links > li {
		display: block;
	}
	#menu-mobile {
		font-size: 125%;
		display: flex;
		align-items: center;
	}
	#menu-mobile-cortlogo {
		display: inline-block;
		height: 2em;
		width: 2em;
		margin-right: var(--default_margin_padding);
		margin-left: .17em;
		border-radius: 5px;
	}
	.menu-btn {
		display: inline-block;
	}
	#tz {
		width: 100%;
	}
	#tztitle {
		text-align: left;
	}
	.menudetails ul {
		position: relative;
		margin-left: 0;
	}
	#menu-lang-list {
		display: flex;
		justify-content: space-around;
	}
}

